testing/tests/ui/default.stderr
error: the `default` filter requires a variable name on its left-hand side
 --> LhsExpr.html:1:3
       "(1 + 1) | default(2) }}"
 --> tests/ui/default.rs:6:35
  |
6 | #[template(ext = "html", source = "{{ (1 + 1) | default(2) }}")]
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: `default_value` argument is missing when calling `default` filter; its arguments are: (default_value, [boolean])
 --> NoDefaultValue.html:1:3
       "var | default }}"
  --> tests/ui/default.rs:10:35
   |
10 | #[template(ext = "html", source = "{{ var | default }}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^

error: `default_value` argument is missing when calling `default` filter; its arguments are: (default_value, [boolean])
 --> NoDefaultValue2.html:1:3
       "var | default(boolean = true) }}"
  --> tests/ui/default.rs:14:35
   |
14 | #[template(ext = "html", source = "{{ var | default(boolean = true) }}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the `default` filter takes a boolean literal as its optional second argument
 --> NotABool.html:1:20
       "2) }}"
  --> tests/ui/default.rs:24:35
   |
24 | #[template(ext = "html", source = "{{ var | default(1, 2) }}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the `default` filter takes a boolean literal as its optional second argument
 --> NotABool2.html:1:30
       "2) }}"
  --> tests/ui/default.rs:28:35
   |
28 | #[template(ext = "html", source = "{{ var | default(1, boolean = 2) }}")]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `Mutex<u32>` is not `|default` filterable
  --> tests/ui/default.rs:17:10
   |
17 | #[derive(Template)]
   |          ^^^^^^^^ `Mutex<u32>` is not `|default` filterable
   |
   = help: the trait `DefaultFilterable` is not implemented for `Mutex<u32>`
   = help: the following other types implement trait `DefaultFilterable`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'_, T>
             MutexGuard<'_, T>
             NonZero<i128>
             NonZero<i16>
           and $N others
   = note: required for `&Mutex<u32>` to implement `DefaultFilterable`
note: required by a bound in `_::askama::filters::default`
  --> $WORKSPACE/askama/src/filters/builtin.rs
   |
   | pub fn default<L: DefaultFilterable, R>(
   |                   ^^^^^^^^^^^^^^^^^ required by this bound in `default`
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
